# text-summarizer-project

./: LICENSE  README.md  main.py  requirements.txt  setup.cfg  template.py
research/: trials.ipynb
src/text_summarization/: cli.py
src/text_summarization/logging/: __init__.py
src/text_summarization/utils/: common.py
