[metadata]
name = text_summarization
version = 0.1.0
description = An end-to-end machine learning project on text summarization.
long_description = file: README.md
long_description_content_type = text/markdown
author = Okoronkwo Francis Ifeanyi
author_email = francisroyce12@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/Francisroyce/text-summarizer-project
project_urls =
    Homepage = https://github.com/Francisroyce/text-summarizer-project
    Repository = https://github.com/Francisroyce/text-summarizer-project
    Issues = https://github.com/Francisroyce/text-summarizer-project/issues

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12
install_requires =
    transformers
    transformers[sentencepiece]
    datasets
    sacrebleu
    rouge_score
    py7zr
    nltk
    tqdm
    pyyaml
    torch
    notebook
    boto3
    mypy-boto3-s3
    python-box
    ensure
    fastapi
    uvicorn
    jinja2
    pandas
    numpy
    seaborn
    matplotlib


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mlp = text_summarization.cli:main